[package]
name = "emerald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chacha20poly1305 = "0.10.1"
clap = { version = "4.2.7", features = ["cargo"] }
pbkdf2 = "0.12.1"
rand = "0.8.5"
rpassword = "7.2.0"
sha2 = "0.10.6"
tar = "0.4.38"
